--- a/app/views/water-r3/current/eligibility/funding/irrigation-system.html
+++ b/app/views/water-r3/current/eligibility/funding/irrigation-system.html
@@ -1,19 +1,7 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-  What systems will be used to irrigate?
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+     What systems will be used to irrigate?
 {% endblock %}
 
 {% block content %}
