--- a/app/views/water-r3/current/eligibility/funding/irrigated-land.html
+++ b/app/views/water-r3/current/eligibility/funding/irrigated-land.html
@@ -1,28 +1,58 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-  Irrigation land
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+    Irrigated land
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form action="#" method="post">
+
         <h1 class="govuk-heading-l">Irrigated land</h1>
-        <div class="govuk-form-group">
+
+          {{ govukInput({
+            id: "irrigated-land-current",
+            name: "irrigated-land-current",
+            value: data['irrigated-land-current'] if data['irrigated-land-current'] else '',
+            label: {
+              text: "How much land is currently irrigated per year?",
+              classes: "govuk-label--m",
+              isPageHeading: false
+            },
+            hint: {
+              text: "Enter figure in hectares (ha), for example 543.5",
+              classes: "govuk-hint"
+            },
+            suffix: {
+              text: "ha"
+            },
+            classes: "govuk-input--width-5",
+            spellcheck: false
+          }) }}
+
+          {{ govukInput({
+            id: "irrigated-land-target",
+            name: "irrigated-land-target",
+            value: data['irrigated-land-target'] if data['irrigated-land-target'] else '',
+            label: {
+              text: "How much land will be irrigated per year after the project?",
+              classes: "govuk-label--m",
+              isPageHeading: false
+            },
+            hint: {
+              text: "Enter figure in hectares (ha), for example 543.5",
+              classes: "govuk-hint"
+            },
+            suffix: {
+              text: "ha"
+            },
+            classes: "govuk-input--width-5",
+            spellcheck: false
+          }) }}
+          
+          <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="irrigated-land">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
@@ -34,12 +64,9 @@
                 </div>
 
                 <div class="govuk-input__wrapper govuk-!-margin-bottom-8">
-                <input class="govuk-input govuk-input--width-5" id="irrigated-land-current" name="irrigated-land-current" type="text" spellcheck="false" aria-describedby="irrigated-land-current-hint"  value="{{ data['irrigated-land-current'] }}">
-                <div class="govuk-input__suffix" aria-hidden="true">ha</div>
+                  <input class="govuk-input govuk-input--width-5" id="irrigated-land-current" name="irrigated-land-current" type="text" spellcheck="false" aria-describedby="irrigated-land-current-hint"  value="{{ data['irrigated-land-current'] }}">
+                  <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                 </div>
-
-
-
                   <fieldset class="govuk-fieldset" aria-describedby="irrigated-land">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                       <h2 class="govuk-fieldset__heading">
@@ -49,12 +76,12 @@
                         <div id="irrigated-land" class="govuk-hint">
                           Enter figure in hectares (ha), for example 543.5
                         </div>
-
                         <div class="govuk-input__wrapper govuk-!-margin-bottom-7">
                           <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
                           <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                         </div>
-
+                    </fieldset>
+              
 
               <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                 Continue
