--- a/app/views/water-r3/current/eligibility/funding/water-source-2.html
+++ b/app/views/water-r3/current/eligibility/funding/water-source-2.html
@@ -1,7 +1,7 @@
 {% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-    Water source<
+    Water source
 {% endblock %}
 
 {% block content %}
