--- a/app/views/water-r3/current/eligibility/funding/irrigation-systems.html
+++ b/app/views/water-r3/current/eligibility/funding/irrigation-systems.html
@@ -1,20 +1,10 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-  Irrigation systems
+    Irrigated systems
 {% endblock %}
 
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
-{% endblock %}
+{% block content %}
 
 {% block content %}
 
