html to nunjucks

--- a/app/views/water-r3/current/eligibility/funding/irrigated-land.html
+++ b/app/views/water-r3/current/eligibility/funding/irrigated-land.html
@@ -52,7 +52,7 @@
             spellcheck: false
           }) }} 
           
-          <div class="govuk-form-group">
+          {# <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="irrigated-land">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
@@ -81,7 +81,7 @@
                           <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                         </div>
                     </fieldset>
-              
+               #}
 
               <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                 Continue
@@ -94,13 +94,13 @@
                   Back to score
                 </button>
               {% endif %}
-            </div>
+           
         </form>
     </div>
 
     <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <h2 class="govuk-heading-s"> Funding  priorities</h2>
         <div class="govuk-body govuk-!-font-size-19">
             RPA wants to fund projects that:
                    <ul>
