--- a/app/views/water-r3/current/eligibility/funding/irrigated-land.html
+++ b/app/views/water-r3/current/eligibility/funding/irrigated-land.html
@@ -8,7 +8,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form action="#" method="post">
+      <form action="productivity" method="post">
 
         <h1 class="govuk-heading-l">Irrigated land</h1>
 
