html to nunjucks

--- a/app/views/water-r3/current/eligibility/common/project-items.html
+++ b/app/views/water-r3/current/eligibility/common/project-items.html
@@ -10,9 +10,9 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">What eligible items do you need for your project?</h1>
-          <span id="project-items-hint" class="govuk-hint">
+            <p id="project-items-hint" class="govuk-hint">
               Select all the items your project needs
-            </span>
+            </p>
 
               <form method="post" action="../funding/cost">
 
