--- a/app/views/water-r3/current/eligibility/funding/change-summerabs.html
+++ b/app/views/water-r3/current/eligibility/funding/change-summerabs.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 
+{% if data['water-source-2-target'] == 'Mains' %}
+    {{ 'mains-only' | redirect | safe }}
+{% endif %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -48,7 +51,7 @@
 
       {% else %}
 
-          {{ govukRadios ({
+      {{ govukRadios ({
         classes: 'govuk-radios--inline',
         idPrefix: 'change-summerabs', 
         name: 'change-summerabs', 
