html to nunjucks

--- a/app/views/water-r3/current/eligibility/funding/mains-only.html
+++ b/app/views/water-r3/current/eligibility/funding/mains-only.html
@@ -6,8 +6,7 @@
 
 {% block content %}
 
-
-  <form id="mainForm" class="form" action="irrigation-systems" method="post">
+  <form action="irrigation-systems" method="post">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
