--- a/app/views/water/current/change-summerabs.html
+++ b/app/views/water/current/change-summerabs.html
@@ -1,23 +1,10 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-Changing the summer abstraction and mains
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+    You cannot apply for a grant from this scheme - Project cost
 {% endblock %}
 
 {% block content %}
-
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
