--- a/app/views/water-r3/current/eligibility/funding/unsustainable-watersource.html
+++ b/app/views/water-r3/current/eligibility/funding/unsustainable-watersource.html
@@ -1,82 +1,72 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-  Your project
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-  <a class="govuk-back-link" href="water-source-2">Back</a>
+    You cannot apply for a grant from this scheme - Project cost
 {% endblock %}
 
 {% block content %}
 
-<div class="govuk-form-group">
-<form id="mainForm" class="form" action="irrigation-systems" method="post">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+    
+      <form id="mainForm" class="form" action="irrigation-systems" method="post">
 
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
-<h2 class="govuk-heading-l">How will your use of summer abstraction and mains change?</h2>
-{{ govukRadios({
-  name: "summerabs2-only",
-  fieldset: {
-    legend: {
-      text: "Summer water surface abstraction",
-      isPageHeading: false,
-      classes: "govuk-fieldset__legend--m"
-    }
-  },
-  items: [
-  {
-    value: "decrease",
-    text: "Decrease",
-    checked: checked("summerabs2-only", "decrease")
-  },
-    {
-      value: "no",
-      text: "No change",
-      checked: checked("summerabs2-only", "no")
-    }
+        <h1 class="govuk-heading-l"
+          >How will your use of summer abstraction and mains change?
+        </h1>
 
-  ]
-}) }}
+          {{ govukRadios({
+            name: "summerabs2-only",
+            fieldset: {
+              legend: {
+                text: "Summer water surface abstraction",
+                isPageHeading: false,
+                classes: "govuk-fieldset__legend--m"
+              }
+            },
+            items: [
+            {
+              value: "decrease",
+              text: "Decrease",
+              checked: checked("summerabs2-only", "decrease")
+            },
+              {
+                value: "no",
+                text: "No change",
+                checked: checked("summerabs2-only", "no")
+              }
 
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
-{{ govukRadios({
-  name: "mains2-only",
-  fieldset: {
-    legend: {
-      text: "Mains",
-      isPageHeading: false,
-      classes: "govuk-fieldset__legend--m"
-    }
-  },
-  items: [
-  {
-    value: "decrease",
-    text: "Decrease",
-    checked: checked("mains2-only", "decrease")
-  },
-    {
-      value: "no",
-      text: "No change",
-      checked: checked("mains2-only", "no")
-    }
+            ]
+          }) }}
 
-  ]
-}) }}
-        <br>
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-          Continue
-        </button>
+          {{ govukRadios({
+            name: "mains2-only",
+            fieldset: {
+              legend: {
+                text: "Mains",
+                isPageHeading: false,
+                classes: "govuk-fieldset__legend--m"
+              }
+            },
+            items: [
+            {
+              value: "decrease",
+              text: "Decrease",
+              checked: checked("mains2-only", "decrease")
+            },
+              {
+                value: "no",
+                text: "No change",
+                checked: checked("mains2-only", "no")
+              }
+
+            ]
+          }) }}
+        
+        {{ govukButton({
+          text: "Continue",
+          type: "submit"
+        }) }}
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
@@ -85,8 +75,18 @@
             Back to score
           </button>
         {% endif %}
+
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button"
+          >
+            Back to score
+          </button>
+        {% endif %}
+
       </form>
     </div>
+    
     <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
           <h3 class="govuk-heading-s"> Funding priorities </h3>
