html to nunjucks

--- a/app/views/water-r3/current/eligibility/funding/unsustainable-watersource.html
+++ b/app/views/water-r3/current/eligibility/funding/unsustainable-watersource.html
@@ -1,7 +1,7 @@
 {% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme - Project cost
+    How will your use of summer abstraction and mains change?
 {% endblock %}
 
 {% block content %}
@@ -9,10 +9,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
     
-      <form id="mainForm" class="form" action="irrigation-systems" method="post">
+      <form action="irrigation-systems" method="post">
 
-        <h1 class="govuk-heading-l"
-          >How will your use of summer abstraction and mains change?
+        <h1 class="govuk-heading-l">
+          How will your use of summer abstraction and mains change?
         </h1>
 
           {{ govukRadios({
