--- a/app/views/water-r3/current/eligibility/funding/change-summerabs.html
+++ b/app/views/water-r3/current/eligibility/funding/change-summerabs.html
@@ -7,11 +7,11 @@
 {% block content %}
 
 {% set selected_sources = data['water-source-2-target'] %}
-{% if 'Mains' in selected_sources and 'Summer abstraction' in selected_sources %}
+{% if selected_sources and selected_sources is iterable and 'Mains' in selected_sources and 'Summer abstraction' in selected_sources %}
     {{ 'unsustainable-watersource' | redirect | safe }}
 {% endif %}
 
-{% if data['water-source-2-target'] == 'Mains' %}
+{% if selected_sources and 'Mains' in selected_sources %}
     {{ 'mains-only' | redirect | safe }}
 {% endif %}
 
