html to nunjucks

--- a/app/views/water-r3/current/eligibility/funding/results.html
+++ b/app/views/water-r3/current/eligibility/funding/results.html
@@ -317,7 +317,7 @@
 
             {{ govukButton ({
                 text: 'Continue',
-                href: '../details/business-details'
+                href: 'business'
             }) }}
 
         </div>
